objects/Customer_Sales_History__c.object
<CustomObject>
    <description>Stores 24 months worth of customer sales history aggregated into 24 monthly buckets based on SAP customer number and a product hierarchy.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Sales History</relationshipLabel>
        <relationshipName>Customer_Sales_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_1__c</fullName>
        <description>Currency for rev1 fields.  Should always be USD.</description>
        <label>Currency 1</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_2__c</fullName>
        <description>Currency for rev2 fields.  Should always be EUR.</description>
        <label>Currency 2</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_3__c</fullName>
        <description>Currency for rev3 fields.  Will represent the local currency.</description>
        <label>Currency 3</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HA_Quantity_10_Months_Ago__c</fullName>
        <label>HA Quantity 10 Months Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Quantity_11_Months_Ago__c</fullName>
        <label>HA Quantity 11 Months Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Quantity_12_Months_Ago__c</fullName>
        <label>HA Quantity 12 Months Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Quantity_1_Month_Ago__c</fullName>
        <label>HA Quantity 1 Month Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Quantity_Current_Month_Year_Ago__c</fullName>
        <label>HA Quantity Current Month Year Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Quantity_Current_Month__c</fullName>
        <label>HA Quantity Current Month</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev1_10_Months_Ago__c</fullName>
        <label>HA Rev1 10 Months Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev1_11_Months_Ago__c</fullName>
        <label>HA Rev1 11 Months Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev1_12_Months_Ago__c</fullName>
        <label>HA Rev1 12 Months Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev1_1_Month_Ago__c</fullName>
        <label>HA Rev1 1 Month Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev1_Current_Month_Year_Ago__c</fullName>
        <label>HA Rev1 Current Month Year Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev1_Current_Month__c</fullName>
        <label>HA Rev1 Current Month</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev2_1_Month_Ago__c</fullName>
        <label>HA Rev2 1 Month Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev2_Current_Month_Year_Ago__c</fullName>
        <label>HA Rev2 Current Month Year Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev2_Current_Month__c</fullName>
        <label>HA Rev2 Current Month</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev3_1_Month_Ago__c</fullName>
        <label>HA Rev3 1 Month Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev3_Current_Month_Year_Ago__c</fullName>
        <label>HA Rev3 Current Month Year Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Rev3_Current_Month__c</fullName>
        <label>HA Rev3 Current Month</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Quantity_10_Months_Ago__c</fullName>
        <label>HB Quantity 10 Months Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Quantity_11_Months_Ago__c</fullName>
        <label>HB Quantity 11 Months Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Quantity_12_Months_Ago__c</fullName>
        <label>HB Quantity 12 Months Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Quantity_1_Month_Ago__c</fullName>
        <label>HB Quantity 1 Month Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Quantity_Current_Month_Year_Ago__c</fullName>
        <label>HB Quantity Current Month Year Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Quantity_Current_Month__c</fullName>
        <label>HB Quantity Current Month</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev1_10_Months_Ago__c</fullName>
        <label>HB Rev1 10 Months Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev1_11_Months_Ago__c</fullName>
        <label>HB Rev1 11 Months Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev1_12_Months_Ago__c</fullName>
        <label>HB Rev1 12 Months Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev1_1_Month_Ago__c</fullName>
        <label>HB Rev1 1 Month Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev1_Current_Month_Year_Ago__c</fullName>
        <label>HB Rev1 Current Month Year Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev1_Current_Month__c</fullName>
        <label>HB Rev1 Current Month</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev2_1_Month_Ago__c</fullName>
        <label>HB Rev2 1 Month Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev2_Current_Month_Year_Ago__c</fullName>
        <label>HB Rev2 Current Month Year Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev2_Current_Month__c</fullName>
        <label>HB Rev2 Current Month</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev3_1_Month_Ago__c</fullName>
        <label>HB Rev3 1 Month Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev3_Current_Month_Year_Ago__c</fullName>
        <label>HB Rev3 Current Month Year Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Rev3_Current_Month__c</fullName>
        <label>HB Rev3 Current Month</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L04_Quantity_1_Year_Ago__c</fullName>
        <formula>Quantity_13_Months_Ago__c + Quantity_14_Months_Ago__c + Quantity_15_Months_Ago__c + Quantity_16_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L04 Quantity 1 Year Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L04_Quantity_YOY__c</fullName>
        <formula>(Quantity_1_Month_Ago__c + Quantity_2_Months_Ago__c + Quantity_3_Months_Ago__c + Quantity_4_Months_Ago__c) - (Quantity_13_Months_Ago__c + Quantity_14_Months_Ago__c + Quantity_15_Months_Ago__c + Quantity_16_Months_Ago__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L04 Quantity YOY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L04_Quantity__c</fullName>
        <formula>Quantity_1_Month_Ago__c + Quantity_2_Months_Ago__c + Quantity_3_Months_Ago__c + Quantity_4_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L04 Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L12YoY_Diff__c</fullName>
        <formula>(((L12_Revenue__c) - (L12_YOY__c)) * 100)/(L12_YOY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L12YoY%Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L12_Quantity__c</fullName>
        <description>Annual Quantity Value</description>
        <formula>Quantity_1_Month_Ago__c+
                 Quantity_2_Months_Ago__c+
                 Quantity_3_Months_Ago__c+ 
                 Quantity_4_Months_Ago__c+ 
                 Quantity_5_Months_Ago__c+ 
                 Quantity_6_Months_Ago__c+
                 Quantity_7_Months_Ago__c+ 
                 Quantity_8_Months_Ago__c+ 
                 Quantity_9_Months_Ago__c+ 
                 Quantity_10_Months_Ago__c+ 
                 Quantity_11_Months_Ago__c+ 
				 Quantity_12_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Quantity Value</inlineHelpText>
        <label>L12 Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L12_Revenue__c</fullName>
        <description>Annual Revenue</description>
        <formula>Rev3_1_Month_Ago__c+
				Rev3_2_Months_Ago__c+
                Rev3_3_Months_Ago__c+
                Rev3_4_Months_Ago__c+
                Rev3_5_Months_Ago__c+
                Rev3_6_Months_Ago__c+
                Rev3_7_Months_Ago__c+
                Rev3_8_Months_Ago__c+
                Rev3_9_Months_Ago__c+
                Rev3_10_Months_Ago__c+
                Rev3_11_Months_Ago__c+
                Rev3_12_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Revenue</inlineHelpText>
        <label>L12 Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L12_YOY__c</fullName>
        <description>Annual Revenue for previous year</description>
        <formula>Rev3_13_Months_Ago__c+
Rev3_14_Months_Ago__c+
Rev3_15_Months_Ago__c+
Rev3_16_Months_Ago__c+
Rev3_17_Months_Ago__c+
Rev3_18_Months_Ago__c+
Rev3_19_Months_Ago__c+
Rev3_20_Months_Ago__c+
Rev3_21_Months_Ago__c+
Rev3_22_Months_Ago__c+
Rev3_23_Months_Ago__c+
Rev3_24_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L12 YOY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Product Family</description>
        <label>Product Family</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Product Group</description>
        <label>Product Group</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Product Line</description>
        <label>Product Line</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <label>Product Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Product Type</description>
        <label>Product Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTD_Last_Year__c</fullName>
        <description>Quarter Revenue data for last year</description>
        <formula>IF(((MONTH(TODAY()) == 1)||(MONTH(TODAY()) == 4)||(MONTH(TODAY()) == 7)||(MONTH(TODAY()) == 10)),Rev3_Current_Month_Year_Ago__c,IF(((MONTH(TODAY()) == 2)||(MONTH(TODAY()) == 5)||(MONTH(TODAY()) == 8)||(MONTH(TODAY()) == 11)),Rev3_Current_Month_Year_Ago__c + Rev3_13_Months_Ago__c,Rev3_Current_Month_Year_Ago__c + Rev3_13_Months_Ago__c + Rev3_14_Months_Ago__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quarter Revenue data for last year</inlineHelpText>
        <label>QTD Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD__c</fullName>
        <description>Gives the Quaterly generated Sales History (Revenue)</description>
        <formula>IF(((MONTH(TODAY()) == 1)||(MONTH(TODAY()) == 4)||(MONTH(TODAY()) == 7)||(MONTH(TODAY()) == 10)),Rev3_Current_Month__c,IF(((MONTH(TODAY()) == 2)||(MONTH(TODAY()) == 5)||(MONTH(TODAY()) == 8)||(MONTH(TODAY()) == 11)),Rev3_Current_Month__c + Rev3_1_Month_Ago__c,Rev3_Current_Month__c + Rev3_1_Month_Ago__c + Rev3_2_Months_Ago__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gives the Quaterly generated Sales History (Revenue)</inlineHelpText>
        <label>QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_10_Months_Ago__c</fullName>
        <description>Quantity sold for ten months ago.</description>
        <label>Quantity 10 Months Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_11_Months_Ago__c</fullName>
        <description>Quantity sold for eleven months ago.</description>
        <label>Quantity 11 Months Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_12_Months_Ago__c</fullName>
        <label>Quantity 12 Months Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_1_Month_Ago__c</fullName>
        <description>Quantity sold for one month ago.</description>
        <label>Quantity 1 Month Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Current_Month_Year_Ago__c</fullName>
        <description>Quantity sold for current month a year ago.</description>
        <label>Quantity Current Month Year Ago</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Current_Month__c</fullName>
        <description>Quantity sold for current month.</description>
        <label>Quantity Current Month</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev1_10_Months_Ago__c</fullName>
        <description>Revenue for ten months ago in the currency represented by the value in the Currency 1 field.</description>
        <label>Rev1 10 Months Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev1_11_Months_Ago__c</fullName>
        <description>Revenue for eleven months ago in the currency represented by the value in the Currency 1 field.</description>
        <label>Rev1 11 Months Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev1_12_Months_Ago__c</fullName>
        <label>Rev1 12 Months Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev1_1_Month_Ago__c</fullName>
        <description>Revenue for one month ago in the currency represented in the Currency 1 field.</description>
        <label>Rev1 1 Month Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev1_Current_Month_Year_Ago__c</fullName>
        <description>Revenue for current month a year ago in the currency represented by the value in the Currency 1 field.</description>
        <label>Rev1 Current Month Year Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev1_Current_Month__c</fullName>
        <description>Revenue for current month in the currency represented in the Currency 1 field.</description>
        <label>Rev1 Current Month</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev2_1_Month_Ago__c</fullName>
        <description>Revenue for one month ago in the currency represented by the value in the Currency 2 field.</description>
        <label>Rev2 1 Month Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev2_Current_Month_Year_Ago__c</fullName>
        <description>Revenue for current month a year ago in the currency represented by the value in the Currency 2 field.</description>
        <label>Rev2 Current Month Year Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev2_Current_Month__c</fullName>
        <description>Revenue for current month in the currency represented by the value in the Currency 2 field.</description>
        <label>Rev2 Current Month</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev3_1_Month_Ago__c</fullName>
        <description>Revenue for one month ago in the currency represented by the value in the Currency 3 field.</description>
        <label>Rev3 1 Month Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev3_Current_Month_Year_Ago__c</fullName>
        <description>Revenue for current month a year ago in the currency represented by the value in the Currency 3 field.</description>
        <label>Rev3 Current Month Year Ago</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev3_Current_Month__c</fullName>
        <description>Revenue for current month in the currency represented by the value in the Currency 3 field.</description>
        <label>Rev3 Current Month</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Cust_Prod_Curr__c</fullName>
        <description>Unique key used in data integration.</description>
        <externalId>true</externalId>
        <label>IDEXX Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top5KitsandConsumablesAvg__c</fullName>
        <formula>(Quantity_Current_Month__c + Quantity_1_Month_Ago__c + Quantity_2_Months_Ago__c + Quantity_3_Months_Ago__c)/4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top5KitsandConsumablesAvg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top5KitsandConsumables__c</fullName>
        <description>Sum of last 4 months- which means last 3 months and current month for quantity - kits and consumables only.</description>
        <formula>Quantity_Current_Month__c + Quantity_1_Month_Ago__c + Quantity_2_Months_Ago__c + Quantity_3_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of last 4 months- which means last 3 months and current month for quantity - kits and consumables only.</inlineHelpText>
        <label>Top5KitsandConsumables</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Sold__c</fullName>
        <description>Total number of units sold in the past 2 years.</description>
        <label>Units Sold</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YOY_10_Months_Ago__c</fullName>
        <formula>Rev3_10_Months_Ago__c - Rev3_22_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY_10_Months_Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YOY_11_Months_Ago__c</fullName>
        <formula>Rev3_11_Months_Ago__c - Rev3_23_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY_11_Months_Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YOY_1_Month_Ago__c</fullName>
        <formula>Rev3_1_Month_Ago__c - Rev3_13_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY_1_Month_Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YOY_2_Months_Ago__c</fullName>
        <formula>Rev3_2_Months_Ago__c - Rev3_14_Months_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY_2_Months_Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YOY_CurrentMonth__c</fullName>
        <formula>Rev3_Current_Month__c - Rev3_Current_Month_Year_Ago__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY_CurrentMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Sales History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>SAP_Customer_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Sales History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Sales History1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>